# openwrt

./: .clang-format  .config  .config-ex5700  .config_WR101AC  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.sh  .travis.yml  .vermagic  0001-igmpproxy-drop-SSDP-packets.patch  0001-ramips-add-support-for-Nexx-WT3020-devices.patch  01_leds  1.config  202-rockchip-rk3399-split-nanopi-r4s-out-of-evb_rk3399.patch  203-ram-rk3399-Add-support-for-multiple-DDR-types.patch  204-board-nanopi4-unify-1GB-4GB-variants-of-R4S.patch  9-9-2023-pm.config  BSDmakefile  COPYING  Config-kernel.in  Config.in  Config.in.devel  Dockerfile  HATLab-GateBoard-One.config  HATLab-GateBoard-One.feeds  Jenkinsfile  LICENSE  Makefile  Makefile_openwrt-master-test.patch  README  README.md  Readme.md  SECURITY.md  ZTE MF289D Notes  add_wan2.sh  ar9341_tplink_tl-mr3420-v2-32m.dts  ar9341_tplink_tl-mr3420-v2-8m.dts  (+67 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  LinkStar-H68k-1432v1-HRPLDI-v1.md  README.md  SerialConsole.md  dependabot.yml  issue_template  labeler.yml  llm-review-rules.md  pr-branch-labeler.yml  pull_request_template
.jules/: bolt.md  sentinel.md
.zektopic/: BUILD_REPORT.md  CONFLICT_RESOLUTION.md  MANIFEST.md  OPTIMIZATION_CHANGES.md  README.md  SECURITY_CHANGES.md  UPSTREAM_CHANGES.md
CVSROOT/: ciabot.pl  loginfo
LICENSES/: GPL-2.0-only.txt  GPL-2.0-or-later.txt  LICENCE.broadcom_bcm43xx
LocalNotes/: 039-combo-phy-nodes-add-rk356x-part2.patch  320-big-rk3568-dts-backport.patch  Big-rockchipDTS-backportPatch.patch  Patches-2-revisit.txt  anotherproblem-dtsi.txt  bad-rk356x.dtsi  makeMakefilepatch.txt  noGo-mt79.config  patchfix.txt  rk3568-dti-fix.txt  rk3568-linkstar-opc.dts  rk3568.dtsi  (+3 more)
feeds/luci/libs/rpcd-mod-luci/src/: CMakeLists.txt  luci.c
package/firmware/fritz-tools/src/: CMakeLists.txt
package/libs/openssl-gostengine/src/: CMakeLists.txt  CMake_ReadMe.md  README.gost  README.md  e_gost_err.c  e_gost_err.h  gost12sum.1  gost12sum.c  gost89.c  gost89.h  gost_ameth.c  gost_asn1.c  gost_crypt.c  gost_ctl.c  gost_ec_keyx.c  gost_ec_sign.c  gost_eng.c  gost_grasshopper.h  gost_grasshopper_cipher.c  gost_grasshopper_cipher.h  gost_grasshopper_core.c  gost_grasshopper_core.h  gost_grasshopper_defines.c  gost_grasshopper_defines.h  gost_grasshopper_galois_precompiled.c  gost_grasshopper_mac.c  gost_grasshopper_mac.h  gost_grasshopper_math.h  gost_grasshopper_precompiled.c  gost_grasshopper_precompiled.h  gost_lcl.h  gost_md.c  gost_md2012.c  gost_params.c  gost_pmeth.c  gosthash.c  gosthash2012.c  gosthash2012.h  gosthash2012_const.h  gosthash2012_precalc.h  (+4 more)
package/libs/openssl-gostengine/src/patches/1.0.2/: cipher_modes.diff  numeric.diff  oids.diff  pkcs12.diff  smimecap.diff
package/network/utils/udhcpsnoop/src/: CMakeLists.txt  cache.c  dev.c  dhcp.c  dhcpsnoop.h  main.c  msg.h  ubus.c
package/utils/minstrel-rcd/src/: CMakeLists.txt  client.c  main.c  phy.c  rcd.h  server.c
package/utils/rbextract/src/: CMakeLists.txt  Makefile  lzoconf.h  lzodefs.h  minilzo.c  minilzo.h  rbextract.c  rle.c  rle.h  routerboot.h
package/utils/ucode-mod-pkgen/src/: CMakeLists.txt  pk.h  pkcs12.c  ucode.c
package/utils/ucode-mod-uline/src/: CMakeLists.txt  private.h  ucode.c  uline.c  uline.h  utf8.c  vt100.c
package/utils/uencrypt/src/: CMakeLists.txt  uencrypt-mbedtls.c  uencrypt-openssl.c  uencrypt.c  uencrypt.h
package/utils/ufp/src/: CMakeLists.txt  README.md  ucode.c  uht.c  uht.h  xxhash32.c  xxhash32.h
xnd/ipq807x/qca-thermald-10.4/src/: Android.mk  Makefile  Makefile.am  adc-sensor.c  adc-sensor.h  bcl-sensor.c  bcl-sensor.h  configure.ac  gen-sensor.c  gen-sensor.h  ipq-thermald-8064.conf  ipq-thermald-8066.conf  ipq-thermald-8069.conf  modem_mitigation_oncrpc.c  modem_mitigation_qmi.c  modem_sensor_qmi.c  pm8821-sensor.c  pm8821-sensor.h  qmi-ts-sensor.c  qmi-ts-sensor.h  readme.txt  sensors-7x30.c  sensors-8660.c  sensors-8960.c  sensors-8974.c  sensors-8x25.c  sensors-hw.h  sensors-ipq.c  thermal.c  thermal.h  thermal_actions.c  thermal_client.c  thermal_client.h  thermal_config.c  thermal_lib_common.c  thermal_lib_common.h  thermal_mitigation_device_service_v01.c  thermal_mitigation_device_service_v01.h  thermal_monitor.c  thermal_sensor_service_v01.c  (+19 more)
xnd/p4/libjudy/src/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  bootstrap  configure.ac
xnd/p4/libjudy/src/doc/: Makefile.am
xnd/p4/libjudy/src/doc/ext/: Judy1_3.htm  Judy1_funcs_3.htm  JudyHS_3.htm  JudyHS_funcs_3.htm  JudyL_3.htm  JudyL_funcs_3.htm  JudySL_3.htm  JudySL_funcs_3.htm  Judy_3.htm  README
xnd/p4/libjudy/src/doc/int/: 10minutes.htm
xnd/p4/libjudy/src/examples/: Judy1Dup.c  Judy1Dup.h  Judy1DupCheck.c  Judy1Op.c  Judy1Op.h  Judy1OpCheck.c  Makefile  README
xnd/p4/libjudy/src/src/: Judy.h.check.c  Makefile.am  README  build.bat  sh_build
xnd/p4/libjudy/src/src/Judy1/: Judy1.h  Makefile.am  README
xnd/p4/libjudy/src/src/JudyCommon/: JudyPrintJP.c  Makefile.am  README
xnd/p4/libjudy/src/src/JudyHS/: JudyHS.h  Makefile.am  README
xnd/p4/libjudy/src/src/JudyL/: Makefile.am  README
xnd/p4/libjudy/src/src/JudySL/: JudySL.c  Makefile.am  README
xnd/p4/libjudy/src/src/apps/: README
xnd/p4/libjudy/src/src/apps/demo/: JudySort.c  Makefile_deliver  README  README_deliver  funhist.c  interL.c  interSL.c  run_demo
xnd/p4/libjudy/src/test/: CheckDupLines.c  Checkit  Judy1LCheck.c  Judy1LHCheck.c  Judy1LHTime.c  Judy1LTime.c  JudyString.c  Makefile.am  README  SLcompare.c  StringCompare.c  jbgraph  malloc-pre2.8a.c  simple.c  testjbgraph  timeit.c  timeit.h
xnd/p4/libjudy/src/test/Centrino_1.3Mhz_Plots/: Hash_CO.plot  JLHash_CO.plot  JudyHS_CO.plot  JudySL_CO.plot
xnd/p4/libjudy/src/tool/: Makefile.am  README  jhton.c  listJPtype.c
xnd/realtek/realtek-poe/src/: CMakeLists.txt  main.c
xnd/tip/firstcontact/src/: CMakeLists.txt  firstcontact.c
xnd/tip/maverick/src/: CMakeLists.txt  maverick.c
xnd/ubpf/ubpf/src/: CMakeLists.txt  map.c  net.c  prog.c  stats.c  uxdp.c  uxdp.h  xdp.c  xdplist.c  xdpload.c
(+27303 files in other folders)
