man3_MANS = man/man3/Judy \
	    man/man3/Judy1 \
	    man/man3/Judy1_funcs \
	    man/man3/JudyL \
	    man/man3/JudyL_funcs \
	    man/man3/JudySL \
	    man/man3/JudySL_funcs \
	    man/man3/JudyHS \
	    man/man3/JudyHS_funcs \
	    man/man3/J1T \
	    man/man3/J1S \
	    man/man3/J1U \
	    man/man3/J1F \
	    man/man3/J1N \
	    man/man3/J1L \
	    man/man3/J1P \
	    man/man3/J1FE \
	    man/man3/J1NE \
	    man/man3/J1LE \
	    man/man3/J1PE \
	    man/man3/J1C \
	    man/man3/J1BC \
	    man/man3/J1FA \
	    man/man3/J1MU \
	    man/man3/Judy1Test \
	    man/man3/Judy1Set \
	    man/man3/Judy1Unset \
	    man/man3/Judy1First \
	    man/man3/Judy1Next \
	    man/man3/Judy1Last \
	    man/man3/Judy1Prev \
	    man/man3/Judy1FirstEmpty \
	    man/man3/Judy1NextEmpty \
	    man/man3/Judy1LastEmpty \
	    man/man3/Judy1PrevEmpty \
	    man/man3/Judy1Count \
	    man/man3/Judy1ByCount \
	    man/man3/Judy1FreeArray \
	    man/man3/Judy1MemUsed \
	    man/man3/JudyL \
	    man/man3/JLG \
	    man/man3/JLI \
	    man/man3/JLD \
	    man/man3/JLF \
	    man/man3/JLN \
	    man/man3/JLL \
	    man/man3/JLP \
	    man/man3/JLFE \
	    man/man3/JLNE \
	    man/man3/JLLE \
	    man/man3/JLPE \
	    man/man3/JLC \
	    man/man3/JLBC \
	    man/man3/JLFA \
	    man/man3/JLMU \
	    man/man3/JudyLGet \
	    man/man3/JudyLIns \
	    man/man3/JudyLDel \
	    man/man3/JudyLFirst \
	    man/man3/JudyLNext \
	    man/man3/JudyLLast \
	    man/man3/JudyLPrev \
	    man/man3/JudyLFirstEmpty \
	    man/man3/JudyLNextEmpty \
	    man/man3/JudyLLastEmpty \
	    man/man3/JudyLPrevEmpty \
	    man/man3/JudyLCount \
	    man/man3/JudyLByCount \
	    man/man3/JudyLFreeArray \
	    man/man3/JudyLMemUsed \
	    man/man3/JSLG \
	    man/man3/JSLI \
	    man/man3/JSLD \
	    man/man3/JSLF \
	    man/man3/JSLN \
	    man/man3/JSLL \
	    man/man3/JSLP \
	    man/man3/JSLFA \
	    man/man3/JudySLGet \
	    man/man3/JudySLIns \
	    man/man3/JudySLDel \
	    man/man3/JudySLFirst \
	    man/man3/JudySLNext \
	    man/man3/JudySLLast \
	    man/man3/JudySLPrev \
	    man/man3/JudySLFreeArray \
	    man/man3/JHSG \
	    man/man3/JHSI \
	    man/man3/JHSD \
	    man/man3/JHSFA \
	    man/man3/JudyHSGet \
	    man/man3/JudyHSIns \
	    man/man3/JudyHSDel \
	    man/man3/JudyHSFreeArray



man/man3/Judy: 
	../tool/jhton ext/Judy_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' >  man/man3/Judy

man/man3/Judy1:
	../tool/jhton ext/Judy1_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/Judy1
	cd man/man3; ln -s Judy J1T
	cd man/man3; ln -s Judy J1S
	cd man/man3; ln -s Judy J1U
	cd man/man3; ln -s Judy J1F
	cd man/man3; ln -s Judy J1N
	cd man/man3; ln -s Judy J1L
	cd man/man3; ln -s Judy J1P
	cd man/man3; ln -s Judy J1FE
	cd man/man3; ln -s Judy J1NE
	cd man/man3; ln -s Judy J1LE
	cd man/man3; ln -s Judy J1PE
	cd man/man3; ln -s Judy J1C
	cd man/man3; ln -s Judy J1BC
	cd man/man3; ln -s Judy J1FA
	cd man/man3; ln -s Judy J1MU

man/man3/Judy1_funcs:
	../tool/jhton ext/Judy1_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/Judy1_funcs
	cd man/man3; ln -s Judy1_funcs Judy1Test 
	cd man/man3; ln -s Judy1_funcs Judy1Set 
	cd man/man3; ln -s Judy1_funcs Judy1Unset 
	cd man/man3; ln -s Judy1_funcs Judy1First 
	cd man/man3; ln -s Judy1_funcs Judy1Next
	cd man/man3; ln -s Judy1_funcs Judy1Last
	cd man/man3; ln -s Judy1_funcs Judy1Prev
	cd man/man3; ln -s Judy1_funcs Judy1FirstEmpty
	cd man/man3; ln -s Judy1_funcs Judy1NextEmpty
	cd man/man3; ln -s Judy1_funcs Judy1LastEmpty
	cd man/man3; ln -s Judy1_funcs Judy1PrevEmpty
	cd man/man3; ln -s Judy1_funcs Judy1Count
	cd man/man3; ln -s Judy1_funcs Judy1ByCount
	cd man/man3; ln -s Judy1_funcs Judy1FreeArray
	cd man/man3; ln -s Judy1_funcs Judy1MemUsed

man/man3/JudyL:
	../tool/jhton ext/JudyL_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/JudyL
	cd man/man3; ln -s JudyL JLG
	cd man/man3; ln -s JudyL JLI
	cd man/man3; ln -s JudyL JLD
	cd man/man3; ln -s JudyL JLF
	cd man/man3; ln -s JudyL JLN
	cd man/man3; ln -s JudyL JLL
	cd man/man3; ln -s JudyL JLP
	cd man/man3; ln -s JudyL JLFE
	cd man/man3; ln -s JudyL JLNE
	cd man/man3; ln -s JudyL JLLE
	cd man/man3; ln -s JudyL JLPE
	cd man/man3; ln -s JudyL JLC
	cd man/man3; ln -s JudyL JLBC
	cd man/man3; ln -s JudyL JLFA
	cd man/man3; ln -s JudyL JLMU

man/man3/JudyL_funcs:
	../tool/jhton ext/JudyL_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/JudyL_funcs
	cd man/man3; ln -s JudyL_funcs JudyLGet
	cd man/man3; ln -s JudyL_funcs JudyLIns
	cd man/man3; ln -s JudyL_funcs JudyLDel
	cd man/man3; ln -s JudyL_funcs JudyLFirst
	cd man/man3; ln -s JudyL_funcs JudyLNext
	cd man/man3; ln -s JudyL_funcs JudyLLast
	cd man/man3; ln -s JudyL_funcs JudyLPrev
	cd man/man3; ln -s JudyL_funcs JudyLFirstEmpty
	cd man/man3; ln -s JudyL_funcs JudyLNextEmpty
	cd man/man3; ln -s JudyL_funcs JudyLLastEmpty
	cd man/man3; ln -s JudyL_funcs JudyLPrevEmpty
	cd man/man3; ln -s JudyL_funcs JudyLCount
	cd man/man3; ln -s JudyL_funcs JudyLByCount
	cd man/man3; ln -s JudyL_funcs JudyLFreeArray
	cd man/man3; ln -s JudyL_funcs JudyLMemUsed

man/man3/JudySL:
	../tool/jhton ext/JudySL_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/JudySL
	cd man/man3; ln -s JudySL JSLG
	cd man/man3; ln -s JudySL JSLI
	cd man/man3; ln -s JudySL JSLD
	cd man/man3; ln -s JudySL JSLF
	cd man/man3; ln -s JudySL JSLN
	cd man/man3; ln -s JudySL JSLL
	cd man/man3; ln -s JudySL JSLP
	cd man/man3; ln -s JudySL JSLFA

man/man3/JudySL_funcs:
	../tool/jhton ext/JudySL_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/JudySL_funcs
	cd man/man3; ln -s JudySL_funcs JudySLGet
	cd man/man3; ln -s JudySL_funcs JudySLIns
	cd man/man3; ln -s JudySL_funcs JudySLDel
	cd man/man3; ln -s JudySL_funcs JudySLFirst
	cd man/man3; ln -s JudySL_funcs JudySLNext
	cd man/man3; ln -s JudySL_funcs JudySLLast
	cd man/man3; ln -s JudySL_funcs JudySLPrev
	cd man/man3; ln -s JudySL_funcs JudySLFreeArray

man/man3/JudyHS:
	../tool/jhton ext/JudyHS_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/JudyHS
	cd man/man3; ln -s JudyHS JHSG 
	cd man/man3; ln -s JudyHS JHSI
	cd man/man3; ln -s JudyHS JHSD
	cd man/man3; ln -s JudyHS JHSFA

man/man3/JudyHS_funcs:
	../tool/jhton ext/JudyHS_funcs_3.htm | grep -v '^[   ]*$$' | sed -e 's/\.C//' > man/man3/JudyHS_funcs
	cd man/man3; ln -s JudyHS_funcs JudyHSGet
	cd man/man3; ln -s JudyHS_funcs JudyHSIns
	cd man/man3; ln -s JudyHS_funcs JudyHSDel
	cd man/man3; ln -s JudyHS_funcs JudyHSFreeArray

CLEANFILES = man/man3/*
